--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,4 +15,6 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+      - run: free -h
+      - run: cat /proc/cpuinfo
       - run: echo "🍏 This job's status is ${{ job.status }}."
